test/errors/commentNotClosed.experr
ERROR: Unfinished Comment		#line 19
